@@ -10,6 +10,11 @@ If a file is unreadable due to access rights or other non-
 fatal errors, put out error message and continue rather
 than dying messily with a traceback.
 
+Added tilde '~' expansion and variable expansion in the
+options that require a filename.  You can now have this
+"--archive-dir=~/ArchDir/$SYSNAME" if you need it.  No
+expansion is applied to the source or target URL's.
+
 
 New in v0.5.14 (2009/04/02)
 ---------------------------
